--- a/estilos/barraNavegacion.css
+++ b/estilos/barraNavegacion.css
@@ -1,5 +1,5 @@
 #barraNavegacion {
     min-height: 5vh;
 
-    background-color: aqua;
+    background: -webkit-linear-gradient(top,#dfdfdf,#f5f5f5);
 }
