--- a/estilos/cuerpoPagina.css
+++ b/estilos/cuerpoPagina.css
@@ -3,12 +3,24 @@ main {
 
     display: flex;
     flex-wrap: wrap;
+
+    margin: 10px 6px 0;
+    border-radius: 13px 13px 0 0;
+    box-shadow: 0 0 5px gray;
 }
 
-main > :nth-child(odd) {
+#navArticulos, #infoArticulos {
     flex-grow: 1;
 }
 
-main > :nth-child(even){
+#displayArticulos {
     flex-grow: 2;
+}
+
+.separator {
+    width: 1px;
+    margin-block: 3vh;
+    margin-inline: 10px;
+
+    background-color: #999;
 }
