--- a/estilos/headerPrincipal.css
+++ b/estilos/headerPrincipal.css
@@ -1,20 +1,57 @@
 #encabezadoPagina {
-    min-height: 20vh;
+    position: relative;
+
+    font-family: 'Lato';
+    font-size: 15px;
+    font-weight: 400;
+
+    height: max(125px,20vh);
 
     padding-block: max(1.5vh,8px);
     border-bottom: 1px solid rgba(230,230,230,.5);
 
-    background: -webkit-linear-gradient(20deg, #055, #0aa, #0dd, #0aa,#099);
-    box-shadow: 0 0 120px #055 inset;
+    background: -webkit-linear-gradient(20deg, #055, #0aa, #0ee, #0aa,#099);
+    box-shadow: 0 0 120px var(--color-terciario) inset;
 }
 
 #encabezadoPagina > * {
     max-width: max-content;
     height: auto;
-
-    margin: auto;
 }
 
 #imgTitulo {
-    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+
+    font-size: 5em;
+    text-shadow: 0 0 5px white;
+    color: white;
+    background-color: transparent;
+}
+
+.fraseImg {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    width: 20%;
+
+    font-size: 3em;
+    font-weight: 700;
+
+    color: white;
+    text-shadow: 0 0 10px var(--color-terciario);
+    opacity: .2;
+}
+
+.fraseImg:first-child {
+    left: 0;
+    text-align: left;
+}
+
+.fraseImg:last-child {
+    right: 0;
+    text-align: right;
 }
