--- a/estilos/generalStyles.css
+++ b/estilos/generalStyles.css
@@ -17,3 +17,7 @@ html, body {
 #encabezadoPagina, #barraNavegacion, #piePagina {
     display: block;
 }
+
+:where(p,h1,h2,h3,h4,h5,h6,span,div,a)::selection {
+    background-color: transparent;
+}
