--- a/estilos/barraNavegacion.css
+++ b/estilos/barraNavegacion.css
@@ -1,5 +1,54 @@
 #barraNavegacion {
-    min-height: 5vh;
+    position: sticky;
+    top: 0;
+    left: 0;
+
+    max-width: 100vw;
+    height: max(25px,5vh);
 
     background: -webkit-linear-gradient(top,#dfdfdf,#f5f5f5);
+}
+
+.listaNavegacion {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    list-style: none;
+}
+
+.itemNavegacion {
+    margin-inline: 7px;
+    font:23px 'Lato';
+
+    background: -webkit-linear-gradient(top, #d9d9d9, #f5f5f5);
+    border-bottom: 2px solid #f5f5f5;
+
+    transition: all .2s linear 0s;
+}
+
+.itemNavegacion a{
+    text-decoration: none;
+    text-align: end;
+    color: var(--color-terciario);
+}
+
+.itemNavegacion:hover {
+    background: -webkit-linear-gradient(top, #cfcfcf, #f5f5f5);
+    text-shadow: 0 0 3px var(--color-primario);
+    border-bottom: 2px solid var(--color-secundario);
+
+    transition:
+        background .4s ease-out 0s,
+        text-shadow .3s ease-in 0s,
+        border-bottom .4s ease 0s;
+}
+
+.itemNavegacion:active {
+    background: -webkit-linear-gradient(top, #cacaca, #f5f5f5);
+    text-shadow: none;
+
+    transition:
+        background .2s ease-out 0s,
+        text-shadow .2s ease-in 0s;
 }
