--- a/estilos/cuerpoPagina.css
+++ b/estilos/cuerpoPagina.css
@@ -12,11 +12,46 @@ main {
 #navArticulos, #infoArticulos {
     flex: 1 0 200px;
     margin-block: 5vh;
+    color: #012;
 }
 
 #displayArticulos {
     flex: 2 0 400px;
     margin-block: 5vh;
+}
+
+#infoArticulos #tituloArticulo{
+    width: max-content;
+    margin: 0 auto 15px;
+}
+
+#infoArticulos figure{
+    width: 80%;
+    height: 240px;
+    margin: 0 auto 15px;
+    border-radius: 15px;
+    box-shadow: 0 3px 5px #444;
+    background-image: linear-gradient(20deg, #ccc, #ddd, #ccc);
+    background-image: -webkit-linear-gradient(20deg, #ccc, #ddd, #ccc);
+}
+
+#infoArticulos #reseñaArticulo{
+    width: 80%;
+    height: auto;
+    margin: 0 auto 15px;
+    border-radius: 3px;
+    box-shadow: 0 0 5px gray;
+}
+
+#infoArticulos table{
+    width: 85%;
+    margin: 0 auto;
+}
+
+#infoArticulos table tr{
+    display: block;
+    margin-bottom: 3px;
+    text-shadow: 0 0 2px #022;
 }
 
 .separator {
@@ -28,6 +63,8 @@ main {
 
     background-color: #999;
 }
+
+/* Diseño responsive */
 
 @media only screen and (max-width: 870px) {
     #displayArticulos {
