--- a/estilos/barraNavegacion.css
+++ b/estilos/barraNavegacion.css
@@ -19,7 +19,7 @@
 
 .itemNavegacion {
     margin-inline: 7px;
-    font:23px 'Lato';
+    font:23px;
 
     background: -webkit-linear-gradient(top, #d9d9d9, #f5f5f5);
     border-bottom: 2px solid #f5f5f5;
