--- a/estilos/generalStyles.css
+++ b/estilos/generalStyles.css
@@ -4,7 +4,7 @@
     --color-terciario:#055;
 
     scroll-behavior: smooth;
-    font-family: 'Lato';
+    font-family: 'Lato', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 * {
