--- a/estilos/barraNavegacion.css
+++ b/estilos/barraNavegacion.css
@@ -88,14 +88,14 @@ a[name="tituloBarraNavegacion"]{
     -o-transition:        background .2s ease-out 0s,        text-shadow .2s ease-in 0s;
 }
 
-.menuNavegacion{
+#menuNavegacion{
     display: none;
 }
 
 @media only screen and (max-width: 300px){
     /** Estilos del icono de menu */
 
-    .menuNavegacion{
+    #menuNavegacion{
         display: inline;
         position: absolute;
         top: 45%;
